--- a/data_preparation.Rmd
+++ b/data_preparation.Rmd
@@ -131,5 +131,11 @@ saveRDS(map_ept_prepared, file.path(output_dir, "map_ept.RDS"))
 map_dep_prepared <- aggregate_map(map_com_prepared, level = "dep")
 saveRDS(map_dep_prepared, file.path(output_dir, "map_dep.RDS"))
 
+
+# --- ORDRE NOUVEAU ---: Création et sauvegarde du fond de carte pour les Zones d'Emploi
+map_ze_prepared <- aggregate_map(map_com_prepared, level = "ze")
+saveRDS(map_ze_prepared, file.path(output_dir, "map_ze.RDS"))
+
 message("✅ Tous les fichiers ont été sauvegardés dans le dossier '", output_dir, "'.")
+
 ```
